--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ethearnal</title>
+      <link rel="stylesheet" href="styles/hcmodals.css">
     <!-- FAVICON-->
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <!-- START of LINKS-->
@@ -883,12 +884,18 @@
             </div><a href="" class="navbar-brand hidden-xs"><img src="images/logo.png" alt="Ethearnal Logo"></a>
 
 
-              <div style="float:left; margin-left: 19px; margin-top: 24px;">
+              <div style="float:left; margin-left: 19px; margin-top: 26px;">
                   <div style="float:left; margin-left: 19px;">
-                     <i class="material-icons">settings_input_antenna</i>
+                      <!--button id="beep-btn" class="mdl-button mdl-js-button mdl-button--fab">
+                          <i class="material-icons">settings_input_antenna</i>
+                      </button-->
+                      <i class="material-icons">settings_input_antenna</i>
                   </div>
-                  <div style="float:left; margin-left: 19px;">
-                      <p>Something cool happens here!</p>
+                  <div style="float:left; margin-left: 21px;">
+                      <p style="color:#92a8d1;">Something cool</p>
+                  </div>
+                  <div class="mdl-tooltip" data-mdl-for="beep-btn">
+                      PUSH UPDATE TO PEERS
                   </div>
               </div>
 
@@ -1248,7 +1255,8 @@
 
           <div class="filters col-md-3">
               <div class="filter category">
-                  <h6>Profile Filters</h6>
+                  <h6 style="margin-top: 0px; padding-top: 0px;">Search People</h6>
+
               </div>
           </div>
 
@@ -1442,45 +1450,89 @@
 <!--button id="myBtn">Open Modal</button-->
 
 <!-- The Modal -->
-<div id="myModal" class="modal-hc">
+<div id="myModal" class="beep-modal-hc">
 
   <!-- Modal content -->
-  <div class="modal-content-hc">
+  <div class="beep-modal-content-hc">
+      <!--
     <h3>Change Headline Image</h3>
     <span class="close">&times;</span>
-    <p>Some text in the Modal..</p>
+    <p>Some text in the Modal..</p> -->
+      <!-- hc modal content -->
   </div>
 
 </div>
 
 
 <script>
-/*
+
 // Get the modal
 var modal = document.getElementById('myModal');
 
+
 // Get the button that opens the modal
-var btn = document.getElementById("myBtn");
+var btn = document.getElementById("beep-btn");
 
 // Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
+// var span = document.getElementsByClassName("close")[0];
 
 // When the user clicks the button, open the modal
-btn.onclick = function() {
+btn['op_i']=1;
+var k = 0;
+var tno = null;
+
+
+
+var fade_in = function() {
+    k = 0
+    modal.style.opacity = "0.0";
     modal.style.display = "block";
-}
+    tno = setInterval( function(){
+       k += 0.1;
+       //console.log('k',k);
+       modal.style.opacity = ""+k;
+       if(k>=1){
+         clearInterval(tno);
+       }
+
+    },30);
+
+};
+
+
+
+var fade_out = function() {
+    console.log('fade_out');
+
+    k = 1;
+    tno = setInterval( function(){
+       k -= 0.1;
+      // console.log('k',k);
+       modal.style.opacity = ""+k;
+       if(k<=0.1){
+         modal.style.display = "none";
+         clearInterval(tno);
+       }
+
+    },30);
+
+};
+
+btn.onclick = fade_in;
+
 
 // When the user clicks on <span> (x), close the modal
-span.onclick = function() {
+/*span.onclick = function() {
+    fade_out();
     modal.style.display = "none";
-}
+}*/
 
 // When the user clicks anywhere outside of the modal, close it
 window.onclick = function(event) {
     if (event.target == modal) {
-        modal.style.display = "none";
+        fade_out();
     }
-}*/
+}
 </script>
 
 
