ui accordeon handling

--- a/ethnode/ui3/index.html
+++ b/ethnode/ui3/index.html
@@ -86,7 +86,7 @@
                     <i class="icon dropdown"></i>
                 </div>
 
-                <div class=" active content field left floated">
+                <div id="search-wdg" class=" active content field left floated">
                     <div id="text-searh-box" class="ui icon input fluid left floated">
                         <input type="text" placeholder="Search...">
                         <i class="search icon"></i>
