gig deleting unindexing

--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -886,10 +886,10 @@
 
               <div style="float:left; margin-left: 19px; margin-top: 26px;">
                   <div style="float:left; margin-left: 19px;">
-                      <!--button id="beep-btn" class="mdl-button mdl-js-button mdl-button--fab">
+                      <button id="beep-btn" class="mdl-button mdl-js-button mdl-button--fab">
                           <i class="material-icons">settings_input_antenna</i>
-                      </button-->
-                      <i class="material-icons">settings_input_antenna</i>
+                      </button>
+                      <!--i class="material-icons">settings_input_antenna</i-->
                   </div>
                   <div style="float:left; margin-left: 21px;">
                       <p style="color:#92a8d1;">Something cool</p>
