--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -875,6 +875,12 @@
     </div>
     <!-- Including header-->
     <header class="main-header">
+
+
+
+
+
+      <!-- shitty stuff -->
       <div class="container">
         <nav class="navbar navbar-default">
           <!-- Navigation header - logo.-->
@@ -967,6 +973,12 @@
         </nav>
       </div>
     </header>
+
+
+
+
+
+
     <!-- Including {PROFILE} PAGE content-->
     <!--  headline image HEADLINE IMAGE k:headline k:profile k:photo -->
     <section id="my-profile-headline" style="display: none" class="background-image" >
@@ -1093,7 +1105,7 @@
       </div>
     </section>
     <!-- Including {GIGS} page content-->
-    <section class="gigs-page-content">
+    <section class="gigs-page-content" style="display: none">
       <div class="container">
         <div class="filters col-md-3">
             <h6 style="margin-top: 0px; padding-top: 0px;">Search Gigs</h6>
@@ -1421,6 +1433,8 @@
     </section>
 
     <!-- END OTHER PROFILE  -->
+
+
     <!-- jQuery 3.1.1-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- jQuery UI 1.11.2-->
@@ -1608,6 +1622,8 @@ window.onclick = function(event) {
         </div>
       </div>
     </div>
+
+
 
 
   </body>
